assests added for web site

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
         <ul>
             <li><a href="https://github.com/Furk4nBulut" target="_blank"><i class="fab fa-github icon"></i> GitHub</a></li>
             <li><a href="https://www.linkedin.com/in/furkanbulut/" target="_blank"><i class="fab fa-linkedin icon"></i> LinkedIn</a></li>
-            <li><a href="mailto:furkan.bulut@example.com"><i class="fas fa-envelope icon"></i> Email</a></li>
+            <li><a href="mailto:furkanbtng@gmail.com"><i class="fas fa-envelope icon"></i> Email</a></li>
         </ul>
     </footer>
 </body>
