dowloand link added

--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
                 <div class="text-center my-4">
                     <img src="assets/map-tracker/uygulama.png" alt="uygulama" class="img-fluid" style="max-width: 50%;">
                 </div>
+                  <div class="alert alert-warning" role="alert">
+                    <strong>İndirme Linki:</strong> <a href="https://apkpure.com/p/com.map_tracker" target="_blank">APK Pure</a>
+                </div>
+                
+
                 <div class="alert alert-info" role="alert">
                     <strong>Not:</strong> Bu proje benim ilk Flutter projem olup, 0'dan öğrenerek 3 haftada geliştirdiğim bir çalışmadır. Proje süresince edindiğim deneyimleri ve karşılaştığım zorlukları bu uygulama üzerinde pratiğe dökerek kendimi geliştirdim. Bu nedenle, projede bazı eksiklikler veya hatalar olabilir. Geri bildirimleriniz benim için çok değerli.
                 </div>
