project web store link changed

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <img src="assets/map-tracker/uygulama.png" alt="uygulama" class="img-fluid" style="max-width: 50%;">
                 </div>
                   <div class="alert alert-warning" role="alert">
-                    <strong>İndirme Linki:</strong> <a href="https://apkpure.com/p/com.map_tracker" target="_blank">APK Pure</a>
+                    <strong>İndirme Linki:</strong> <a href="https://www.amazon.com/gp/product/B0DVR7SRD1" target="_blank">Amazon Store</a>
                 </div>
                 
 
